--- a/addons/sourcemod/configs/gloves/gloves_schinese.cfg
+++ b/addons/sourcemod/configs/gloves/gloves_schinese.cfg
@@ -1,311 +1,223 @@
 "Gloves"
 {
-	"Hydra Gloves"
+	"九头蛇手套"
 	{
 		"index"			"5035"
-		"Emerald"
+		"翡翠色调"
 		{
 			"index"		"10057"
-			"team"		"2;3"
 		}
-		"Mangrove"
+		"红树林"
 		{
 			"index"		"10058"
-			"team"		"2;3"
 		}
-		"Rattler"
+		"响尾蛇"
 		{
 			"index"		"10059"
-			"team"		"2;3"
 		}
-		"Case Hardened"
+		"表面淬火"
 		{
 			"index"		"10060"
-			"team"		"2;3"
-		}
-		"Charred"
-		{
-			"index"		"10006"
-			"team"		"2;3"
-		}
-		"Snakebite"
-		{
-			"index"		"10007"
-			"team"		"2;3"
-		}
-		"Bronzed"
-		{
-			"index"		"10008"
-			"team"		"2;3"
-		}
-		"Guerrilla"
-		{
-			"index"		"10039"
-			"team"		"2;3"
 		}
 	}
 	"血猎手套"
 	{
 		"index"			"5027"
-		"Emerald"
-		{
-			"index"		"10057"
-			"team"		"2;3"
-		}
-		"Mangrove"
-		{
-			"index"		"10058"
-			"team"		"2;3"
-		}
-		"Rattler"
-		{
-			"index"		"10059"
-			"team"		"2;3"
-		}
-		"Case Hardened"
-		{
-			"index"		"10060"
-			"team"		"2;3"
-		}
 		"焦炭"
 		{
 			"index"		"10006"
-			"team"		"2;3"
 		}
 		"蛇咬"
 		{
 			"index"		"10007"
-			"team"		"2;3"
 		}
 		"染铜"
 		{
 			"index"		"10008"
-			"team"		"2;3"
 		}
 		"游击队"
 		{
 			"index"		"10039"
-			"team"		"2;3"
 		}
 	}
 	"运动手套"
 	{
 		"index"			"5030"
-		"Amphibious"
+		"双栖"
 		{
 			"index"		"10045"
-			"team"		"2;3"
 		}
-		"Bronze Morph"
+		"青铜形态"
 		{
 			"index"		"10046"
-			"team"		"2;3"
 		}
-		"Omega"
+		"欧米伽"
 		{
 			"index"		"10047"
-			"team"		"2;3"
 		}
-		"Vice"
+		"迈阿密风云"
 		{
 			"index"		"10048"
-			"team"		"2;3"
 		}
 		"树篱迷宫"
 		{
 			"index"		"10038"
-			"team"		"2;3"
 		}
 		"潘多拉之盒"
 		{
 			"index"		"10037"
-			"team"		"2;3"
 		}
 		"超导体"
 		{
 			"index"		"10018"
-			"team"		"2;3"
 		}
 		"干旱"
 		{
 			"index"		"10019"
-			"team"		"2;3"
 		}
 	}
 	"手部束带"
 	{
 		"index"			"5032"
-		"Cobalt Skulls"
+		"钴蓝骷髅"
 		{
 			"index"		"10053"
-			"team"		"2;3"
 		}
-		"Overprint"
+		"套印"
 		{
 			"index"		"10054"
-			"team"		"2;3"
 		}
-		"Duct Tape"
+		"防水布胶带"
 		{
 			"index"		"10055"
-			"team"		"2;3"
 		}
-		"Arboreal"
+		"森林色调"
 		{
 			"index"		"10056"
-			"team"		"2;3"
 		}
 		"皮革"
 		{
 			"index"		"10009"
-			"team"		"2;3"
 		}
 		"云杉 DDPAT"
 		{
 			"index"		"10010"
-			"team"		"2;3"
 		}
 		"屠夫"
 		{
 			"index"		"10021"
-			"team"		"2;3"
 		}
 		"恶土"
 		{
 			"index"		"10036"
-			"team"		"2;3"
 		}
 	}
 	"驾驶手套"
 	{
 		"index"			"5031"
-		"King Snake"
+		"王蛇"
 		{
 			"index"		"10041"
-			"team"		"2;3"
 		}
-		"Imperial Plaid"
+		"蓝紫格子"
 		{
 			"index"		"10042"
-			"team"		"2;3"
 		}
-		"Overtake"
+		"超越"
 		{
 			"index"		"10043"
-			"team"		"2;3"
 		}
-		"Racing Green"
+		"墨绿色调"
 		{
 			"index"		"10044"
-			"team"		"2;3"
 		}
 		"月色织物"
 		{
 			"index"		"10013"
-			"team"		"2;3"
 		}
 		"护卫"
 		{
 			"index"		"10015"
-			"team"		"2;3"
 		}
 		"深红织物"
 		{
 			"index"		"10016"
-			"team"		"2;3"
 		}
 		"菱背蛇纹"
 		{
 			"index"		"10040"
-			"team"		"2;3"
 		}
 	}
 	"专业手套"
 	{
 		"index"			"5034"
-		"Crimson Web"
+		"深红之网"
 		{
 			"index"		"10061"
-			"team"		"2;3"
 		}
-		"Buckshot"
+		"狩鹿"
 		{
 			"index"		"10062"
-			"team"		"2;3"
 		}
-		"Fade"
+		"渐变之色"
 		{
 			"index"		"10063"
-			"team"		"2;3"
 		}
-		"Mogul"
+		"大腕"
 		{
 			"index"		"10064"
-			"team"		"2;3"
 		}
 		"森林 DDPAT"
 		{
 			"index"		"10030"
-			"team"		"2;3"
 		}
 		"深红和服"
 		{
 			"index"		"10033"
-			"team"		"2;3"
 		}
 		"翠绿之网"
 		{
 			"index"		"10034"
-			"team"		"2;3"
 		}
 		"元勋"
 		{
 			"index"		"10035"
-			"team"		"2;3"
 		}
 	}
 	"摩托手套"
 	{
 		"index"			"5033"
-		"POW!"
+		"嘭！"
 		{
 			"index"		"10049"
-			"team"		"2;3"
 		}
-		"Turtle"
+		"玳瑁"
 		{
 			"index"		"10050"
-			"team"		"2;3"
 		}
-		"Transport"
+		"交运"
 		{
 			"index"		"10051"
-			"team"		"2;3"
 		}
-		"Polygon"
+		"多边形"
 		{
 			"index"		"10052"
-			"team"		"2;3"
 		}
 		"日蚀"
 		{
 			"index"		"10024"
-			"team"		"2;3"
 		}
 		"*嘣！*"
 		{
 			"index"		"10027"
-			"team"		"2;3"
 		}
 		"薄荷"
 		{
 			"index"		"10026"
-			"team"		"2;3"
 		}
 		"清凉薄荷"
 		{
 			"index"		"10028"
-			"team"		"2;3"
 		}
 	}
 }
